--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
-    color: #333;
+    color: white;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -58,11 +58,9 @@ p {
 
 .content {
     display: flex;
-    margin: 82px auto 32px;
+    margin: 55px auto 32px;
     padding: 0 16px;
-    max-width: 960px;
     flex-direction: column;
-    align-items: center;
 }
 
 svg.material-icons {
