--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<div class="bg-dark content">
+<div class="bg-light text-dark content">
   <router-outlet></router-outlet>
 </div>
