--- a/src/app/components/vehicle-insurance/vehicle-insurance.component.html
+++ b/src/app/components/vehicle-insurance/vehicle-insurance.component.html
@@ -1,32 +1,28 @@
 <div class="page-title">
-    <h1>Informații vehicul</h1>
+    <h1>Asigurări auto</h1>
 </div>
 <div class="country-content">
     <h3><span class="fi fi-at"></span> Austria</h3>
+    <h3><span class="fi fi-by"></span> Belarus</h3>
     <h3><span class="fi fi-be"></span> Belgia</h3>
+    <h3><span class="fi fi-ba"></span> Bosnia-H.</h3>
+    <h3><span class="fi fi-gb"></span> Bulgaria</h3>
     <h3><span class="fi fi-cz"></span> Cehia </h3>
+    <h3><span class="fi fi-hr"></span> Croația</h3>
     <h3><span class="fi fi-dk"></span> Danemarca</h3>
     <h3><span class="fi fi-ee"></span> Estonia</h3>
     <h3><span class="fi fi-fi"></span> Finlanda</h3>
-    <h3><span class="fi fi-fr"></span> Franța</h3>
-    <h3><span class="fi fi-de"></span> Germania</h3>
-    <h3><span class="fi fi-ie"></span> Irlanda</h3>
-    <h3><span class="fi fi-is"></span> Islanda</h3>
-    <h3><span class="fi fi-lt"></span> Lituania </h3>
-    <h3><span class="fi fi-mt"></span> Malta</h3>
+    <h3><span class="fi fi-gr"></span> Grecia</h3>
+    <h3><span class="fi fi-lt"></span> Letonia </h3>
     <h3><span class="fi fi-gb"></span> Marea Britanie</h3>
     <h3><span class="fi fi-md"></span> Moldova</h3>
-    <h3><span class="fi fi-no"></span> Norvegia</h3>
-    <h3><span class="fi fi-nl"></span> Olanda</h3>
     <h3><span class="fi fi-pl"></span> Polonia</h3>
     <h3><span class="fi fi-pt"></span> Portugalia</h3>
-    <h3><span class="fi fi-ro"></span> Romania</h3>
-    <h3><span class="fi fi-ru"></span> Rusia</h3>
+    <h3><span class="fi fi-ro"></span> România</h3>
+    <h3><span class="fi fi-rs"></span> Serbia</h3>
     <h3><span class="fi fi-sk"></span> Slovacia</h3>
     <h3><span class="fi fi-si"></span> Slovenia</h3>
-    <h3><span class="fi fi-es"></span> Spania</h3>
     <h3><span class="fi fi-se"></span> Suedia</h3>
+    <h3><span class="fi fi-tr"></span> Turcia</h3>
     <h3><span class="fi fi-ua"></span> Ucraina</h3>
 </div>
-<!-- <h3>India <span class="fi fi-{{countryCode | lowercase}}"></span></h3>
-<h3>Canada <span class="fi fi-{{countryCode | lowercase}}"></span></h3> -->
