make generic component for country menus

--- a/src/app/components/vehicle-insurance/vehicle-insurance.component.html
+++ b/src/app/components/vehicle-insurance/vehicle-insurance.component.html
@@ -1,7 +1,7 @@
 <div class="page-title">
     <h1>Asigurări auto</h1>
 </div>
-<div class="country-content">
+<!-- <div class="country-content">
     <h3><span class="fi fi-at"></span> Austria</h3>
     <h3><span class="fi fi-by"></span> Belarus</h3>
     <h3><span class="fi fi-be"></span> Belgia</h3>
@@ -25,4 +25,5 @@
     <h3><span class="fi fi-se"></span> Suedia</h3>
     <h3><span class="fi fi-tr"></span> Turcia</h3>
     <h3><span class="fi fi-ua"></span> Ucraina</h3>
-</div>
+</div> -->
+<app-country-navigation [contentFileName]="contentFileName" ></app-country-navigation>
