--- a/src/app/components/technical-check/technical-check.component.html
+++ b/src/app/components/technical-check/technical-check.component.html
@@ -1,28 +1,4 @@
 <div class="page-title">
     <h1>Inspecții tehnice</h1>
 </div>
-<div class="country-content">
-    <h3><span class="fi fi-by"></span> Belarus</h3>
-    <h3><span class="fi fi-be"></span> Belgia</h3>
-    <h3><span class="fi fi-gb"></span> Bulgaria</h3>
-    <h3><span class="fi fi-cz"></span> Cehia </h3>
-    <h3><span class="fi fi-hr"></span> Croația</h3>
-    <h3><span class="fi fi-dk"></span> Danemarca</h3>
-    <h3><span class="fi fi-ch"></span> Elveția</h3>
-    <h3><span class="fi fi-ee"></span> Estonia</h3>
-    <h3><span class="fi fi-fr"></span> Franța</h3>
-    <h3><span class="fi fi-ie"></span> Irlanda</h3>
-    <h3><span class="fi fi-is"></span> Islanda</h3>
-    <h3><span class="fi fi-it"></span> Italia</h3>
-    <h3><span class="fi fi-kz"></span> Kazahstan</h3>
-    <h3><span class="fi fi-lt"></span> Lituania </h3>
-    <h3><span class="fi fi-gb"></span> Marea Britanie</h3>
-    <h3><span class="fi fi-no"></span> Norvegia</h3>
-    <h3><span class="fi fi-nl"></span> Olanda</h3>
-    <h3><span class="fi fi-pl"></span> Polonia</h3>
-    <h3><span class="fi fi-ro"></span> România</h3>
-    <h3><span class="fi fi-ru"></span> Rusia</h3>
-    <h3><span class="fi fi-si"></span> Slovenia</h3>
-    <h3><span class="fi fi-es"></span> Spania</h3>
-    <h3><span class="fi fi-se"></span> Suedia</h3>
-</div>
+<app-country-navigation [contentFileName]="contentFileName" ></app-country-navigation>
