--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
+.content{
+    height: 100vh;
+}
 :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
