--- a/src/app/components/country-navigation/country-navigation.component.html
+++ b/src/app/components/country-navigation/country-navigation.component.html
@@ -1,10 +1,22 @@
-<div class="country-content">
-    <div *ngFor="let navigationCountry of navigationCountries">
-        <a class="nav-link" href="navigationCountry.url">
-            <h3>
-                <span class="fi fi-{{navigationCountry.countryCode}}"></span> 
-                {{navigationCountry.country}}
-            </h3>
-        </a>
-    </div>
-</div>
+<!-- <div class="country-content">
+    <a *ngFor="let navigationCountry of navigationCountries" 
+        class="nav-link" href="{{navigationCountry.url}}">
+        <h3>
+            <span class="fi fi-{{navigationCountry.countryCode}}"></span>
+            {{navigationCountry.country}}
+        </h3>
+    </a>
+</div> -->
+
+<div class="col-12 container country-content" style="height: 350px;">
+    <ul class="list-unstyled row">
+      <li *ngFor="let navigationCountry of navigationCountries" class="list-item col-6 border-top py-2">
+        <a class="nav-link" href="{{navigationCountry.url}}">
+        <h3>
+            <span class="fi fi-{{navigationCountry.countryCode}}"></span>
+            {{navigationCountry.country}}
+        </h3>
+    </a>
+      </li>
+    </ul>
+  </div>
