--- a/src/app/components/sanctions/sanctions.component.html
+++ b/src/app/components/sanctions/sanctions.component.html
@@ -14,7 +14,7 @@
         </a>
         <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
-                <a href="#" class="list-group-item list-group-item-action list-group-item-success">
+                <a routerLink="oug-97"class="list-group-item list-group-item-action list-group-item-success">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                         class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
