--- a/src/app/components/sanctions/sanctions.component.html
+++ b/src/app/components/sanctions/sanctions.component.html
@@ -14,7 +14,7 @@
         </a>
         <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
-                <a routerLink="oug-97"class="list-group-item list-group-item-action list-group-item-success">
+                <a routerLink="oug-97" class="list-group-item list-group-item-action list-group-item-success">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                         class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
@@ -24,7 +24,7 @@
                     </svg>
                     DESCHIDE ACTUL NORMATIV
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a [routerLink]="['details', '1']" class="list-group-item list-group-item-action">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-link-45deg" viewBox="0 0 16 16">
                         <path
@@ -34,7 +34,7 @@
                     </svg>
                     Carte de identitate expirată
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a [routerLink]="['details', '2']" class="list-group-item list-group-item-action">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-link-45deg" viewBox="0 0 16 16">
                         <path
@@ -44,7 +44,7 @@
                     </svg>
                     Carte de identitate pierdută/furată
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a [routerLink]="['details', '3']" class="list-group-item list-group-item-action">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-link-45deg" viewBox="0 0 16 16">
                         <path
@@ -54,7 +54,7 @@
                     </svg>
                     Carte de identitate deteriorată/distrusă
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a [routerLink]="['details', '4']" class="list-group-item list-group-item-action">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-link-45deg" viewBox="0 0 16 16">
                         <path
@@ -64,7 +64,7 @@
                     </svg>
                     Modificări adăugiri în actul de identitate
                 </a>
-                <a href="#" class="list-group-item list-group-item-action">
+                <a [routerLink]="['details', '5']" class="list-group-item list-group-item-action">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-link-45deg" viewBox="0 0 16 16">
                         <path
