moved language selector position, updated page titles with translations

--- a/src/app/components/driving-license/driving-license.component.html
+++ b/src/app/components/driving-license/driving-license.component.html
@@ -1,5 +1,5 @@
 <div class="page-title">
-    <h1>Permise de conducere</h1>
+    <h1> {{ 'menu.driving-licenses' | transloco }} </h1>
 </div>
 
 <app-country-navigation [contentFileName]="contentFileName" ></app-country-navigation>
