--- a/src/app/components/travel-docs/travel-docs.component.html
+++ b/src/app/components/travel-docs/travel-docs.component.html
@@ -1,5 +1,5 @@
 <div class="page-title">
-    <h1>Documente de călătorie</h1>
+    <h1>{{ 'menu.travel-docs' | transloco }}</h1>
 </div>
 
 <app-country-navigation [contentFileName]="contentFileName"></app-country-navigation>
