--- a/src/app/components/vehicle-insurance/vehicle-insurance.component.html
+++ b/src/app/components/vehicle-insurance/vehicle-insurance.component.html
@@ -1,4 +1,4 @@
 <div class="page-title">
-    <h1>Asigurări auto</h1>
+    <h1>{{ 'menu.car-insurance' | transloco }}</h1>
 </div>
 <app-country-navigation [contentFileName]="contentFileName" ></app-country-navigation>
