--- a/src/app/components/glossasry/glossasry.component.html
+++ b/src/app/components/glossasry/glossasry.component.html
@@ -1,5 +1,5 @@
 <div class="page-title">
-    <h1>Glosar Documente</h1>
+    <h1>{{ 'menu.glossary' | transloco }}</h1>
 </div>
 <div class="list-group">
     <a href="#" class="list-group-item list-group-item-action">
