--- a/src/app/components/sanction-details/sanction-details.component.html
+++ b/src/app/components/sanction-details/sanction-details.component.html
@@ -1,5 +1,5 @@
 <div class="page-title">
-    <h1>Sancțiuni contravenționale</h1>
+    <h1>{{ 'menu.sanctions' | transloco }}</h1>
 </div>
 
 <div class="card">
