--- a/src/app/components/sanctions/sanctions.component.html
+++ b/src/app/components/sanctions/sanctions.component.html
@@ -1,5 +1,5 @@
 <div class="page-title">
-    <h1>Sancțiuni contravenționale</h1>
+    <h1>{{ 'menu.sanctions' | transloco }}</h1>
 </div>
 <div class="list-group">
     <div class="accordion-item list-group-item list-group-item-action">
