--- a/src/app/components/technical-check/technical-check.component.html
+++ b/src/app/components/technical-check/technical-check.component.html
@@ -1,4 +1,4 @@
 <div class="page-title">
-    <h1>Inspecții tehnice</h1>
+    <h1>{{ 'menu.technical-check' | transloco }}</h1>
 </div>
 <app-country-navigation [contentFileName]="contentFileName" ></app-country-navigation>
