--- a/src/app/components/useful-sites/useful-sites.component.html
+++ b/src/app/components/useful-sites/useful-sites.component.html
@@ -1,5 +1,5 @@
 <div class="page-title">
-    <h1>Utile</h1>
+    <h1>{{ 'menu.useful-links' | transloco }}</h1>
 </div>
 <div class="list-group">
     <a href="#" class="list-group-item list-group-item-action">
