--- a/src/app/components/vehicle-info/vehicle-info.component.html
+++ b/src/app/components/vehicle-info/vehicle-info.component.html
@@ -1,5 +1,5 @@
 <div class="page-title">
-    <h1>Informații vehicul</h1>
+    <h1>{{ 'menu.vehicle-info' | transloco }}</h1>
 </div>
 
 <app-country-navigation [contentFileName]="contentFileName" ></app-country-navigation>
