--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,13 @@
-// .content{
-//     height: 100vh;
-// }
+.app-content {
+    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    margin-top: 55px auto;
+    padding: 0 16px;
+    flex-direction: column;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='2560' height='1440' preserveAspectRatio='none' viewBox='0 0 2560 1440'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1049%26quot%3b)' fill='none'%3e%3crect width='2560' height='1440' x='0' y='0' fill='%230e2a47'%3e%3c/rect%3e%3cpath d='M2476 462L2475 -418' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M1614 737L1613 -277' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1541 1352L1540 1918' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M2110 316L2109 -643' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M857 633L856 -158' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M1148 1103L1147 128' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M276 181L275 -873' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M321 585L320 -463' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M2064 1032L2063 1530' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M1934 433L1933 -537' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1027 876L1026 1855' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M2106 196L2105 802' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M1162 803L1161 -119' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1075 316L1074 -461' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1235 1226L1234 1793' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M721 282L720 1355' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M1731 232L1730 -184' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1086 566L1085 178' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M2385 623L2384 -402' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M522 108L521 -580' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M2033 819L2032 1372' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M1170 106L1169 -464' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M2278 268L2277 730' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M2290 923L2289 414' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M704 1257L703 2261' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1457 88L1456 -601' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M2508 1388L2507 937' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M1625 190L1624 992' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1357 23L1356 626' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M25 151L24 1029' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M828 442L827 1466' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1183 249L1182 726' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M545 1000L544 1573' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M2175 659L2174 1667' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M2274 1223L2273 1980' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M1650 918L1649 1672' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M750 331L749 -717' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M248 755L247 -321' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M839 344L838 -436' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M913 1277L912 305' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M873 984L872 1920' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1622 68L1621 -541' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M225 533L224 1068' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1265 1161L1264 2129' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M796 1164L795 297' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M2034 1250L2033 2322' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1570 324L1569 1132' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M2210 91L2209 466' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M1626 1248L1625 283' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M147 429L146 1132' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M2508 671L2507 1060' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M2296 640L2295 1485' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1746 737L1745 1767' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M1574 1120L1573 250' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M241 675L240 1038' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M786 1279L785 2039' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M167 129L166 -940' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M429 346L428 -64' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M325 217L324 -653' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M1279 178L1278 663' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M280 521L279 0' stroke-width='8' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M242 248L241 1113' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3cpath d='M162 462L161 1275' stroke-width='6' stroke='url(%26quot%3b%23SvgjsLinearGradient1051%26quot%3b)' stroke-linecap='round' class='Up'%3e%3c/path%3e%3cpath d='M84 606L83 -184' stroke-width='10' stroke='url(%26quot%3b%23SvgjsLinearGradient1050%26quot%3b)' stroke-linecap='round' class='Down'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1049'%3e%3crect width='2560' height='1440' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='0%25' y1='0%25' x2='0%25' y2='100%25' id='SvgjsLinearGradient1050'%3e%3cstop stop-color='rgba(28%2c 83%2c 142%2c 0)' offset='0'%3e%3c/stop%3e%3cstop stop-color='%231c538e' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='0%25' y1='100%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1051'%3e%3cstop stop-color='rgba(28%2c 83%2c 142%2c 0)' offset='0'%3e%3c/stop%3e%3cstop stop-color='%231c538e' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
+}
+
 :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
@@ -23,272 +30,8 @@ p {
     margin: 0;
 }
 
-.spacer {
-    flex: 1;
-}
-
-.toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-}
-
-.toolbar img {
-    margin: 0 16px;
-}
-
-.toolbar #twitter-logo {
-    height: 40px;
-    margin: 0 8px;
-}
-
-.toolbar #youtube-logo {
-    height: 40px;
-    margin: 0 16px;
-}
-
-.toolbar #twitter-logo:hover,
-.toolbar #youtube-logo:hover {
-    opacity: 0.8;
-}
-
-.content {
-    display: flex;
-    margin: 55px auto 32px;
-    padding: 0 16px;
-    flex-direction: column;
-}
-
-svg.material-icons {
-    height: 24px;
-    width: auto;
-}
-
-svg.material-icons:not(:last-child) {
-    margin-right: 8px;
-}
-
-.card svg.material-icons path {
-    fill: #888;
-}
-
-.card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 16px;
-}
-
-.card {
-    all: unset;
-    border-radius: 4px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
-    height: 40px;
-    width: 200px;
-    margin: 0 8px 16px;
-    padding: 16px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s ease-in-out;
-    line-height: 24px;
-}
-
-.card-container .card:not(:last-child) {
-    margin-right: 0;
-}
-
-.card.card-small {
-    height: 16px;
-    width: 168px;
-}
-
-.card-container .card:not(.highlight-card) {
-    cursor: pointer;
-}
-
-.card-container .card:not(.highlight-card):hover {
-    transform: translateY(-3px);
-    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
-}
-
-.card-container .card:not(.highlight-card):hover .material-icons path {
-    fill: rgb(105, 103, 103);
-}
-
-.card.highlight-card {
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-    border: none;
-    width: auto;
-    min-width: 30%;
-    position: relative;
-}
-
-.card.card.highlight-card span {
-    margin-left: 60px;
-}
-
-svg#rocket {
-    width: 80px;
-    position: absolute;
-    left: -10px;
-    top: -24px;
-}
-
-svg#rocket-smoke {
-    height: calc(100vh - 95px);
-    position: absolute;
-    top: 10px;
-    right: 180px;
-    z-index: -10;
-}
-
-a,
-a:visited,
-a:hover {
-    color: #1976d2;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #125699;
-}
-
-.terminal {
-    position: relative;
-    width: 80%;
-    max-width: 600px;
-    border-radius: 6px;
-    padding-top: 45px;
-    margin-top: 8px;
-    overflow: hidden;
-    background-color: rgb(15, 15, 16);
-}
-
-.terminal::before {
-    content: "\2022 \2022 \2022";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 4px;
-    background: rgb(58, 58, 58);
-    color: #c2c3c4;
-    width: 100%;
-    font-size: 2rem;
-    line-height: 0;
-    padding: 14px 0;
-    text-indent: 4px;
-}
-
-.terminal pre {
-    font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
-    color: white;
-    padding: 0 1rem 1rem;
-    margin: 0;
-}
-
-.circle-link {
-    height: 40px;
-    width: 40px;
-    border-radius: 40px;
-    margin: 8px;
-    background-color: white;
-    border: 1px solid #eeeeee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: 1s ease-out;
-}
-
-.circle-link:hover {
-    transform: translateY(-0.25rem);
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-}
-
-footer {
-    margin-top: 8px;
-    display: flex;
-    align-items: center;
-    line-height: 20px;
-}
-
-footer a {
-    display: flex;
-    align-items: center;
-}
-
-.github-star-badge {
-    color: #24292e;
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-    padding: 3px 10px;
-    border: 1px solid rgba(27, 31, 35, .2);
-    border-radius: 3px;
-    background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
-    margin-left: 4px;
-    font-weight: 600;
-}
-
-.github-star-badge:hover {
-    background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
-    border-color: rgba(27, 31, 35, .35);
-    background-position: -.5em;
-}
-
-.github-star-badge .material-icons {
-    height: 16px;
-    width: 16px;
-    margin-right: 4px;
-}
-
-svg#clouds {
-    position: fixed;
-    bottom: -160px;
-    left: -230px;
-    z-index: -10;
-    width: 1920px;
-}
-
-/* Responsive Styles */
-@media screen and (max-width: 767px) {
-
-    .card-container>*:not(.circle-link),
-    .terminal {
-        width: 100%;
-    }
-
-    .card:not(.highlight-card) {
-        height: 16px;
-        margin: 8px 0;
-    }
-
-    .card.highlight-card span {
-        margin-left: 72px;
-    }
-
-    svg#rocket-smoke {
-        right: 120px;
-        transform: rotate(-5deg);
-    }
-}
-
-@media screen and (max-width: 575px) {
-    svg#rocket-smoke {
-        display: none;
-        visibility: hidden;
-    }
+.content-container{
+    margin-top:80px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
 }
