--- a/src/app/components/country-navigation/country-navigation.component.html
+++ b/src/app/components/country-navigation/country-navigation.component.html
@@ -8,7 +8,7 @@
     </a>
 </div> -->
 
-<div class="col-12 container country-content" style="height: 350px;">
+<div class="col-12 container country-content">
     <ul class="list-unstyled row">
         <li *ngFor="let navigationCountry of navigationCountries" class="list-item col-6 border-top py-2">
             <a class="nav-link" href="{{navigationCountry.url}}">
