--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,4 +34,6 @@ p {
     margin-top:80px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
