--- a/src/app/components/country-navigation/country-navigation.component.html
+++ b/src/app/components/country-navigation/country-navigation.component.html
@@ -8,9 +8,9 @@
     </a>
 </div> -->
 
-<div class="col-12 container country-content">
+<div class="container country-content">
     <ul class="list-unstyled row">
-        <li *ngFor="let navigationCountry of navigationCountries" class="list-item col-6 border-top py-2">
+        <li *ngFor="let navigationCountry of navigationCountries" class="list-item border-top py-2">
             <a class="nav-link" href="{{navigationCountry.url}}">
                 <h3>
                     <span class="fi fi-{{navigationCountry.countryCode}}"></span>
