--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -6,7 +6,7 @@
         </a>
         <!-- <div>
             <app-language-selector></app-language-selector>
-        </div> -->
+        </div> *ngIf="authService.userData as user"-->
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span>Menu </span>
