--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,3 +1,12 @@
 .nav-item > a {
     color: white;
 }
+
+.nav-link {
+    font-size: 20px;
+}
+
+.nav-link > svg {
+    width: 30px;
+    height: 30px;
+}
