--- a/src/app/components/sanction-details/sanction-details.component.html
+++ b/src/app/components/sanction-details/sanction-details.component.html
@@ -3,10 +3,10 @@
 </div>
 
 <div class="card">
-    <div class="card-header">
+    <div class="card-header bg-white">
        <h3> {{selectedSanction.title}} </h3>
     </div>
-    <div class="card-body">
+    <div class="card-body bg-light">
         <pre>{{selectedSanction.text}}</pre>
     </div>
   </div>
