--- a/src/app/components/sanction-details/sanction-details.component.scss
+++ b/src/app/components/sanction-details/sanction-details.component.scss
@@ -5,4 +5,5 @@ pre {
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
     font-size: 16px;
+    font-weight: bold;
 }
