remove call to server

--- a/src/app/components/country-navigation/country-navigation.component.html
+++ b/src/app/components/country-navigation/country-navigation.component.html
@@ -22,5 +22,5 @@
             </h4> -->
         </li>
     </ul>
-    <pre *ngIf="contentFileName=='assets/content/documente-de-calatorie.json'">{{testData}}</pre>
+    <!-- <pre *ngIf="contentFileName=='assets/content/documente-de-calatorie.json'">{{testData}}</pre> -->
 </div>
