add all content

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -4,9 +4,6 @@
             <img src="assets/images/logo.png" height="50" />
             Web Verificări
         </a>
-        <!-- <div>
-            <app-language-selector></app-language-selector>
-        </div> *ngIf="authService.userData as user"-->
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span>Menu </span>
@@ -22,9 +19,6 @@
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <!-- <li class="nav-item">
-                        <app-language-selector></app-language-selector>
-                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" routerLink="/" data-bs-dismiss="offcanvas">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -131,7 +125,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-dismiss="offcanvas">
+                        <a class="nav-link" href="https://legislatie.just.ro/" data-bs-dismiss="offcanvas">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                 class="bi bi-collection-fill" viewBox="0 0 16 16">
                                 <path
