--- a/src/app/components/sanctions/sanctions.component.html
+++ b/src/app/components/sanctions/sanctions.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="list-group">
     <div class="accordion-item list-group-item list-group-item-action">
-        <a class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+        <a class="accordion-button menu-item" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
             aria-expanded="false" aria-controls="flush-collapseOne">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus"
                 viewBox="0 0 16 16">
@@ -77,7 +77,7 @@
             </div>
         </div>
     </div>
-    <a href="#" class="list-group-item list-group-item-action">
+    <a href="https://legislatie.just.ro/Public/DetaliiDocument/63704" class="list-group-item list-group-item-action menu-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-link"
             viewBox="0 0 16 16">
             <path
@@ -87,7 +87,7 @@
         </svg>
         LEGEA nr. 248/2005 (pașapoarte)
     </a>
-    <a href="#" class="list-group-item list-group-item-action">
+    <a href="https://legislatie.just.ro/Public/DetaliiDocument/29296" class="list-group-item list-group-item-action menu-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-link"
             viewBox="0 0 16 16">
             <path
@@ -97,7 +97,7 @@
         </svg>
         O.U.G. nr. 105/2001
     </a>
-    <a href="#" class="list-group-item list-group-item-action">
+    <a href="https://legislatie.just.ro/Public/DetaliiDocument/41005" class="list-group-item list-group-item-action menu-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-link"
             viewBox="0 0 16 16">
             <path
@@ -107,7 +107,7 @@
         </svg>
         O.U.G nr. 194/2002
     </a>
-    <a href="#" class="list-group-item list-group-item-action">
+    <a href="https://legislatie.just.ro/Public/DetaliiDocument/125693" class="list-group-item list-group-item-action menu-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-link"
             viewBox="0 0 16 16">
             <path
@@ -117,7 +117,7 @@
         </svg>
         LEGEA nr. 61/1991 (ordine publică)
     </a>
-    <a href="#" class="list-group-item list-group-item-action">
+    <a href="https://legislatie.just.ro/Public/DetaliiDocument/90207" class="list-group-item list-group-item-action menu-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-link"
             viewBox="0 0 16 16">
             <path
@@ -127,7 +127,7 @@
         </svg>
         O.U.G. nr. 23/2008
     </a>
-    <a href="#" class="list-group-item list-group-item-action">
+    <a href="https://legislatie.just.ro/Public/DetaliiDocumentAfis/97706" class="list-group-item list-group-item-action menu-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-link"
             viewBox="0 0 16 16">
             <path
@@ -137,7 +137,7 @@
         </svg>
         H.G. nr. 1061/2008 (deșeuri)
     </a>
-    <a href="#" class="list-group-item list-group-item-action list-group-item-info">
+    <a href="#" class="list-group-item list-group-item-action list-group-item-info menu-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-calculator-fill"
             viewBox="0 0 16 16">
             <path
