fix small issue

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -125,7 +125,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://legislatie.just.ro/" data-bs-dismiss="offcanvas">
+                        <a class="nav-link" href="https://legislatie.just.ro/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                 class="bi bi-collection-fill" viewBox="0 0 16 16">
                                 <path
